Fix: Lottie player gif in behind

--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -161,6 +161,7 @@
     padding-bottom: 180px;
     display: flex;
     gap: 30px;
+    z-index: -1;
 }
 .findHomeImage{
     width: 100%;
